--- a/templates/main.html
+++ b/templates/main.html
@@ -39,7 +39,7 @@
         <br><br><br><br><br><br>
         <br><br><br><br><br><br>
         <p><h1 class="text-center" style="color:#ffffff;">Decompress Data</h1></p>
-        <form action=" {{ url_for('home') }} ">
+        <form action=" {{ url_for('decompress_huffman') }} ">
         <div class="text-center" style="font-size:xx-large;">
             <input class="btn-warning" type="submit" value="Decompress"></div>
         </form>
