--- a/templates/compress_file.html
+++ b/templates/compress_file.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,14 +18,13 @@
             }
         </style>
     </head>
-    
 
 <body>
     <header class="site-header">
         <div class='text-center'>
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">   
-                <a class="navbar-brand mr-4"  href="/">Emotionic</a>
+                <a class="navbar-brand mr-4"  href="/">Data Compressor</a>
             </div>
         </nav>
         </div>
