--- a/templates/result.html
+++ b/templates/result.html
@@ -46,6 +46,10 @@
         <p>
             <a href="{{ url_for('download_compressed') }}">Download Compressed File</a>
         </p>
+
+        <p>
+            <a href="{{ url_for('download_huffman') }}">Download Huffman File</a>
+        </p>
         
     </main>
 
